# hh

./: .gitignore  CHAT_BOOTSTRAP.md  MAIN_MEMORY.md  NARRATIVE_ANCHORS.md  README.md  extension.js  package.json  prompt_generator.py  pyproject.toml  test_prompt_generator.py
agentic_system/: __init__.py  cli.py  config.py  runtime.py  schemas.py
agentic_system/agent/: executor.py  multi_agent.py  planner.py  reflection.py
agentic_system/llm/: providers.py
agentic_system/memory/: store.py
agentic_system/optimization/: optimizer.py
agentic_system/plugins/: plugin_manager.py
agentic_system/prompting/: prompt_builder.py
agentic_system/tools/: base.py  default_tools.py
agentic_system/ui/: api.py
chrome-extension/: background.js  content.css  content.js  core.js  engine.js  manifest.json  models.js  options.html  options.js  popup.css  popup.html  popup.js  prompt-knowledge.js  tools.js
chrome_extension/: manifest.json
chrome_extension/data/: prompt_playbooks.json  prompt_training_data.chrome.json
chrome_extension/src/: background.js  content.js  engine.js  options.css  options.html  options.js  popup.css  popup.html  popup.js
data/: lucario_prompt_blueprints.json
examples/: sample_prompts.md
scripts/: build_exe.py
tests/: test_runtime.py
