[project]
name = "craft-agent-system"
version = "0.1.0"
description = "Autonomous CRAFT-based agent system with planning, memory, reflection, and prompt optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
web = ["fastapi>=0.111", "uvicorn>=0.30"]
local-llm = ["transformers>=4.41", "torch>=2.2"]

build-exe = ["pyinstaller>=6.0"]

[project.scripts]
craft-agent = "agentic_system.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_system*"]
